# onyx

./: .dockerignore  AGENTS.md  CONTRIBUTING.md  Cargo.production.toml  Cargo.prototype.toml  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SKILL.md  config.toml.example  docker-compose.dev.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  EVALUATION.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_PROGRESS.md  ROADMAP.md  WINDOWS_SETUP.md
frontend/: index.html
scripts/: build.ps1  build.sh  pre-commit  setup-windows.ps1
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/onyx_sdk/: __init__.py  client.py  errors.py  models.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs
sdks/rust/src/models/: billing.rs  edge.rs  ingest.rs  mod.rs  node.rs  search.rs  version.rs
sdks/typescript/: README.md  deno.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  index.ts  models.ts  runtime.ts
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/ingest/: mod.rs
src/model/: edge.rs  embedding.rs  mod.rs  node.rs  version.rs
src/query/: mod.rs
src/server/: mod.rs  payments.rs
src/store/: benchmark.rs  crash_recovery.rs  graph.rs  history.rs  migration.rs  mod.rs  transaction.rs  vector.rs
src/store/persistent/: mod.rs  rocks_graph.rs  rocks_history.rs  rocks_vector.rs
tests/: wal_durability.rs
