[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-sdk"
version = "0.1.0"
description = "Official Python SDK for the Onyx AI infrastructure engine — semantic search, knowledge graphs, and temporal versioning."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["onyx", "sdk", "knowledge-graph", "vector-search", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["onyx_sdk"]
